# specgap

./: .gitignore  HACKATHON_JUDGE_GUIDE.md  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE_OVERVIEW.md  ASSURANCE_BOUNDARY.md  BOXARENA_POSITIONING.md  DEMO_PATHS.md  DIAGRAMS.md  ENCODING.md  EXAMPLE_INDEX.md  OPERATIONAL_EXAMPLES.md  OUTREACH_PACKETS.md  PUBLICATION_STATE.md  REPLAYABLE_EVIDENCE_EXAMPLE.md  RESEARCHER_ENTRY_POINTS.md  RESEARCH_DIRECTIONS.md  SHAREABLE_LINKS.md  SPECGAP_ABSTRACT.md  SPECGAP_FAQ.md  SPECGAP_ONE_PAGE.md  SPECGAP_POSITIONING.md  SPECGAP_POSITIONING_ANTI_PATTERNS.md  SPECIFICATION.md  STABILITY_STATUS.md  TCB.md  THREAT_MODEL_SUMMARY.md  VERSIONING_AND_SCOPE.md  WHY_DISAGREEMENT_MATTERS.md
examples/: 04_paraphrased_sandbox.json  05_candidate_policy_ranking.json  06_triangulation_disagreement.json  boxarena_preflight_divergence.json  boxarena_preflight_pass.json  sandbox_no_network.json  sandbox_readonly_fs.json  syscall_policy_mismatch.json
reports/: 05_candidate_evaluation_report.md  06_triangulation_disagreement_report.md  demo_report.md
schemas/: assurance-result-1.0.schema.json  specgap-detail-1.0.schema.json
specgap/: __init__.py  assurance.py  candidate_eval.py  cli.py  extractor.py  models.py  reporter.py  semantic_diff.py  triangulation.py  z3_checker.py
specgap-mcp/: README.md  requirements.txt  server.py  smoke_test.py
submission/: DEMO_RECORDING_CHECKLIST.md  FINAL_VALIDATION.md  HACKATHON_SUMMARY.md  SPECGAP_FINAL_REPORT.md  SUBMISSION_FREEZE.md
tests/: test_boxarena_adapter.py  test_candidate_eval.py  (+6 more)
(+25 files in other folders)
