[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "specgap"
version = "0.1.0"
description = "Hybrid fuzzy + SMT semantic specification divergence debugger"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["z3-solver>=4.12"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
specgap = "specgap.cli:main"

[tool.setuptools]
packages = ["specgap"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
